testsuite/tests/typecheck/should_compile/T26154/A.hs
{-# LANGUAGE TypeFamilies #-}

module A where

import {-# SOURCE #-} B

type family F a b
type instance F a b = b

